--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
 language: python
 python:
-  - "2.7"
-  - "3.3"
-  - "3.4"
+  - "3.5"
 cache: pip
 install:
   - pip install numpy
   - pip install sympy
-  - pip install unittest
+  - pip install unittest2
 script:
   - python FiniteElements.py
